# wind

./: .gitignore  CORE_FEATURE_EDA.ipynb  EDA_MAIN.ipynb  EDA_SUPPLEMENT.ipynb  FEATURE_REDUCTION.ipynb  MODELING.ipynb  MODELING_ADVANCED.ipynb  MODELING_CV.ipynb  MODELING_FICR.ipynb  MODELING_FILM.ipynb  MODELING_MLP.ipynb  MODELING_MLP_TUNED.ipynb  MODELING_SEED_ENS.ipynb  MODELING_SEED_ENS_FINAL.ipynb  MODELING_V2.ipynb  MODELING_V3_FINAL.ipynb  PIPELINE_FINAL.ipynb  README.md  advanced_ablation_summary.json  feature_reduction_summary.json  ficr_postproc_summary.json  ficrw_result.json  final_alpha.json  gbm_hpo_result.json  mlp_ablation_summary.json  modeling_validation_summary.json  official_metric.py  pyproject.toml  submission_v2.csv  submission_v3.csv  submission_v4.csv  submission_v5.csv  submission_validation.py  v4_summary.json  v5_summary.json  wind_lib.py  wind_paths.py  wind_pipeline.py
claudedocs/: research_nwp_features_2026-07-09.md
document/: CONSTRAINTS_주의점.md  PREPROCESSING_VERIFICATION.md  baram2026_project_plan.md  research_conditioning_layers_2026-07-08.md
preprocessed/: spatial_v2_test.parquet  spatial_v2_train.parquet  test_kpx_group_1.parquet  test_kpx_group_2.parquet  test_kpx_group_3.parquet
scripts/: alpha_ext.py  alpha_probe8.py  build_spatial_v2.py
submission/: README.md  __init__.py  registry.json
submission/ver_1/: CORE_FEATURE_EDA.ipynb  EDA_MAIN.ipynb  EDA_SUPPLEMENT.ipynb  FEATURE_REDUCTION.ipynb  MODELING.ipynb  MODELING_ADVANCED.ipynb  (+7 more)
tests/: __init__.py  test_official_metric.py  test_submission_layout.py  test_wind_lib.py
(+80 files in other folders)
