[project]
name = "wind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hmmlearn>=0.3.3",
    "ipykernel>=7.3.0",
    "lightgbm>=4.5.0",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "polars>=1.42.1",
    "pyarrow>=18.0.0",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "statsmodels>=0.14.6",
    "torch>=2.12.1",
]
