[project]
name = "wind"
version = "0.1.0"
description = "BARAM 2026 day-ahead wind power forecasting experiments"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "lightgbm>=4.5.0",
    "numpy>=2.4.6",
    "pandas>=2.2.0",
    "pyarrow>=18.0.0",
    "scikit-learn>=1.9.0",
    "torch>=2.12.1",
]

[project.optional-dependencies]
notebook = [
    "ipykernel>=7.3.0",
    "matplotlib>=3.11.0",
    "polars>=1.42.1",
    "scipy>=1.17.1",
    "statsmodels>=0.14.6",
]
legacy = [
    "hmmlearn>=0.3.3",
]
